welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:17: error: not found: value dogHoue
dogHoue()
^MethodsDogHouse:21: error: not found: value dogHoue
dogHoue()
^MethodsDogHouse:25: error: not found: value dogHoue
dogHoue()
^MethodsDogHouse:29: error: not found: value dogHoue
dogHoue()
^