welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  baisseBrosse()
  avance()
	avance()
	left()
	avance()
	avance()
	left()
	avance()
	avance()
	left()
	avance()
	avance()
	left()
  leveBrosse()
}
dogHoue()
avance()
avance()
avance()
dogHoue()
avance()
avance()
avance()
dogHoue()
avance()
avance()
avance()
dogHoue()
avance()
avance()
avance()